tests/ui/repr/invalid_repr_list_help.stderr
error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:4:8
   |
LL | #[repr(uwu)]
   |        ^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:7:8
   |
LL | #[repr(uwu = "a")]
   |        ^^^^^^^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:10:8
   |
LL | #[repr(uwu(4))]
   |        ^^^^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:15:8
   |
LL | #[repr(uwu, u8)]
   |        ^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error[E0552]: unrecognized representation hint
  --> $DIR/invalid_repr_list_help.rs:20:8
   |
LL | #[repr(uwu)]
   |        ^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`
   = note: for more information, visit <https://doc.rust-lang.org/reference/type-layout.html?highlight=repr#representations>

error: unknown `doc` attribute `owo`
  --> $DIR/invalid_repr_list_help.rs:21:7
   |
LL | #[doc(owo)]
   |       ^^^
   |
note: the lint level is defined here
  --> $DIR/invalid_repr_list_help.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0552`.
